2000-07-24  Peter Williams  <peterw@helixcode.com>

	* mail-ops.c (op_display_message): Change "display
	a message" into "retrieve a messsage" in the
	description of mail_op_display_message.

	* mail-threads.c (display_timeout): New function.
	Only display the progress dialog if the operation
	takes more than a second to perform.
	(hide_queue_window): New function. Hide the queue
	window as an idle function... I'm thinking maybe
	the problem with hiding it was due to us not
	being in a GTK event sequence? Perhaps it's only
	the timeout, which was not being cancelled, which
	is now.
	
	* message-list.c (get_message_uid): New function,
	copy of get_message_info, except gets only the
	UID, as that's all that most functions want, and
	we avoid a Camel call.

2000-07-21  Peter Williams  <peterw@helixcode.com>

	* message-thread.c (setup_thread_messages): New
	operation: thread_messages, simple wrapper around
	thread_messages () and thread_messages_free();

	* message-list.c (cleanup_regenerate_messagelist): 
	Use new thread_messages operation instead of just
	calling ... thread_messages :-)

	* folder-browser.c (folder_browser_destroy): Use new
	sync_folder operation instead of calling camel_folder_sync
	directly.

	* component-factory.c (create_folder): Changed to use
	new create_folder operation.

	* mail-ops.c (mail_do_create_folder): New operation: create
	folder. New operation: sync folder.

	* mail-format.c (cmm_destroyed): Remove the url hashtable from
	the larger hashtable when it gets destroyed.

	* mail-callbacks.c (fetch_mail): Pass a hook function and data
	down the chain to pick up the folder_changed and change the view.

	* mail-ops.c: Rename from mail-ops-new.c now that it's a little more
	solid. 
	(fetch_mail): Add new options to hook and unhook an event while the
	filter driver runs. A hack, but all of the operations are to some
	extent.
	(cleanup_fetch_mail): Unref the destination folder if not NULL.